# anti-llm-cheat-lsp

./: CLAUDE.md  Cargo.toml  README.md  admissibility_report.md
benches/: perf_refactors.rs
fixtures/negative_controls/: dead_alt_smell.rs  hedge_smell.rs
src/: ast_adapter.rs  capabilities.rs  config.rs  diagnostics.rs  engine.rs  main.rs  ocel.rs  semantic.rs  server.rs
src/nouns/: server.rs
src/parsers/: cargo_toml.rs  contract.rs  fitness_report.rs  ggen_toml.rs  json_rpc.rs  markdown_claims.rs  receipt_json.rs  refgraph.rs  rust_tree_sitter.rs  tera_template.rs  typescript.rs  typescript_ast.rs
src/rules/: authority.rs  claims.rs  complexity.rs  contract.rs  dead_alt.rs  declare_laws.rs  determinism.rs  ggen.rs  hedge.rs  hollow.rs  lsif06.rs  lsp318.rs  lsp318_coverage.rs  mod.rs  mutation.rs  ocel_rules.rs  oracle.rs  placeholder.rs  receipts.rs  refgraph.rs  routes.rs  rust_smells.rs  surface.rs  test.rs  trace.rs  typescript.rs  typescript_ast.rs  version.rs
src/server/: recommend.rs
src/virtual_docs/: ggen_render.rs  lsp318_full_matrix.rs  ocel_export.rs  process_model.rs  receipt_ledger.rs
tests/: dogfood.rs  dogfood_v26_6_27.rs  innovations_test.rs
