[package]
name = "anti-llm-cheat-lsp"
version = "26.6.18"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2021"
rust-version = "1.82.0"
description = "Process-mining LSP server that detects LLM cheating patterns via OCEL 2.0, Declare constraints, and alignment-backed conformance checking"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/seanchatmangpt/lsp-max"
repository = "https://github.com/seanchatmangpt/lsp-max"
categories = ["development-tools", "command-line-utilities"]
keywords = ["lsp", "process-mining", "anti-cheat", "conformance", "ocel"]
publish = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-noun-verb = "26.6.2"
clap-noun-verb-macros = "26.6.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
star-toml = { path = "../star-toml" }
regex = "1.10"
glob = "0.3"
aho-corasick = "1"
ignore = "0.4"
memchr = "2.5"
rustc-hash = "2"
lsp-max = { path = "../lsp-max", version = "26.6.18" }
lsp-max-ast = { path = "../lsp-max/crates/lsp-max-adapters/lsp-max-ast", version = "26.6.18" }


parking_lot = "0.12.5"
lsp-types-max = { version = "26.6.24", features = ["proposed"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
tree-sitter = "0.26.5"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23.2"
blake3 = "1"
wasm4pm-compat = { version = "26.6.11", features = ["formats", "strict", "wasm4pm"] }
linkme = "0.3.36"
uuid = { version = "1.20.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.2"
predicates = "3.1"
lsp-max-playground = { path = "../lsp-max/crates/playground" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "perf_refactors"
harness = false

[patch.crates-io]
wasm4pm = { path = "../wasm4pm/wasm4pm" }
wasm4pm-compat = { path = "../wasm4pm-compat" }
lsp-types-max = { path = "../lsp-types-max" }


